--- a/static/index.html
+++ b/static/index.html
@@ -10,14 +10,14 @@
     <textarea id="jsonInput" rows="6" cols="50"></textarea>
     <div class="button">
         <button onclick="sendJSON('dfa')">Create DFA</button>
-        <button onclick="sendJSON('npda')">Create NPDA</button>
-        <button onclick="sendJSON('mntm')">Create MNTM</button>
+        <button onclick="sendJSON('dpda')">Create DPDA</button>
+        <button onclick="sendJSON('dtm')">Create DTM</button>
     </div>
 
     <div class="button">
         <a href="dfa.html">Show DFA</a>
-        <a href="npda.html">Show NPDA</a>
-        <a href="mntm.html">Show MNTM</a>
+        <a href="dpda.html">Show DPDA</a>
+        <a href="dtm.html">Show DTM</a>
     </div>
 
     <h3>Response:</h3>
